[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "RPi.GPIO",
    "adafruit-circuitpython-framebuf>=1.6.9",
    "adafruit-circuitpython-rfm9x>=2.2.20",
    "adafruit-circuitpython-ssd1306>=2.12.21",
    "adafruit-python-shell>=1.9.1",
]
